syntax = "proto3";

// Package payment.v1 содержит API для работы с платежами - создан для оплаты заказов симулирует работу платёжного шлюза
package payment.v1;

option go_package = "github.com/linemk/rocket-shop/shared/pkg/proto/payment/v1;payment_v1";

// PaymentService предоставляет API для работы с платежами
service PaymentService {
  // PayOrder обрабатывает команду на оплату и возвращает transaction_uuid
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// Запрос на оплату заказа
message PayOrderRequest {
  // order_uuid UUID заказа
  string order_uuid = 1;
  
  // user_uuid UUID пользователя, который инициирует оплату
  string user_uuid = 2;
  
  // payment_method выбранный способ оплаты
  PaymentMethod payment_method = 3;
}

// Ответ с результатом оплаты
message PayOrderResponse {
  // transaction_uuid UUID транзакции оплаты
  string transaction_uuid = 1;
}

// Способ оплаты
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD = 1;
  PAYMENT_METHOD_SBP = 2;
  PAYMENT_METHOD_CREDIT_CARD = 3;
  PAYMENT_METHOD_INVESTOR_MONEY = 4;
}