package main

import (
	"context"
	"log"
	"net"

	"github.com/google/uuid"
	payment_v1 "github.com/linemk/rocket-shop/shared/pkg/proto/payment/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

const (
	grpcPort = "50052"
)

// PaymentService —Ä–µ–∞–ª–∏–∑—É–µ—Ç gRPC —Å–µ—Ä–≤–∏—Å –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å –ø–ª–∞—Ç–µ–∂–∞–º–∏
type PaymentService struct {
	payment_v1.UnimplementedPaymentServiceServer
}

// NewPaymentService —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π —ç–∫–∑–µ–º–ø–ª—è—Ä PaymentService
func NewPaymentService() *PaymentService {
	return &PaymentService{}
}

// PayOrder –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∫–æ–º–∞–Ω–¥—É –Ω–∞ –æ–ø–ª–∞—Ç—É –∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç transaction_uuid
func (s *PaymentService) PayOrder(ctx context.Context, req *payment_v1.PayOrderRequest) (*payment_v1.PayOrderResponse, error) {
	// –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º UUID —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
	transactionUUID := uuid.New()

	// –í—ã–≤–æ–¥–∏–º —Å–æ–æ–±—â–µ–Ω–∏–µ –≤ –∫–æ–Ω—Å–æ–ª—å —Å–æ–≥–ª–∞—Å–Ω–æ —Å–ø–µ—Ü–∏—Ñ–∏–∫–∞—Ü–∏–∏
	log.Printf("–û–ø–ª–∞—Ç–∞ –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ, transaction_uuid: %s", transactionUUID.String())

	// –í–æ–∑–≤—Ä–∞—â–∞–µ–º –æ—Ç–≤–µ—Ç
	return &payment_v1.PayOrderResponse{
		TransactionUuid: transactionUUID.String(),
	}, nil
}

func main() {
	// –°–æ–∑–¥–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	lis, err := net.Listen("tcp", ":"+grpcPort)
	if err != nil {
		log.Fatalf("Failed to listen: %v", err)
	}

	grpcServer := grpc.NewServer()

	// –°–æ–∑–¥–∞–µ–º –∏ —Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä—É–µ–º PaymentService
	paymentService := NewPaymentService()
	payment_v1.RegisterPaymentServiceServer(grpcServer, paymentService)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(grpcServer)

	log.Printf("üí≥ PaymentService starting on port %s", grpcPort)

	// –ó–∞–ø—É—Å–∫–∞–µ–º —Å–µ—Ä–≤–µ—Ä
	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("Failed to serve: %v", err)
	}
}
